[package]
name = "mqrstt"
version = "0.1.4"
homepage = "https://github.com/GunnarMorrigan/mqrstt"
repository = "https://github.com/GunnarMorrigan/mqrstt"
documentation = "https://docs.rs/mqrstt"
categories = ["network-programming"]
readme = "README.md"
edition = "2021"
license = "MPL-2.0"
keywords = [ "MQTT", "IoT", "MQTTv5", "messaging", "client" ]
description = "Pure rust MQTTv5 client implementation for Smol, Tokio and soon sync too."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["smol", "tokio"]
tokio = ["dep:tokio"]
smol = ["dep:smol"]
# quic = ["dep:quinn"]

[dependencies]
# Packets
bytes = "1.2.1"
bitflags = "1.3.2"

# Errors
thiserror = "1.0.37"
tracing = "0.1.37"

async-channel = "1.8.0"
async-mutex = "1.4.0"
futures = { version = "0.3.25", default-features = false, features = ["std", "async-await"] }
async-trait = "0.1.61"

# quic feature flag
# quinn = {version = "0.9.0", optional = true }

# tokio feature flag
tokio = { version = "1.24.1", features = ["macros", "io-util", "net", "time"], optional = true }

# smol feature flag
smol = { version = "1.3.0", optional = true }

[dev-dependencies]
pretty_assertions = "1.3.0"
tokio = { version = "1.24.1", features = ["rt-multi-thread", "rt", "macros", "sync", "io-util", "net", "time"] }
smol = { version = "1.3.0" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

rustls = { version = "0.20.7" }
rustls-pemfile = { version = "1.0.1" }
webpki = { version = "0.22.0" }
async-rustls = { version = "0.3.0" }
tokio-rustls = "0.23.4"
rstest = "0.16.0"