[package]
name = "mqrstt"
version = "0.2.1"
homepage = "https://github.com/GunnarMorrigan/mqrstt"
repository = "https://github.com/GunnarMorrigan/mqrstt"
documentation = "https://docs.rs/mqrstt"
categories = ["network-programming"]
readme = "README.md"
edition = "2021"
license = "MPL-2.0"
keywords = [ "MQTT", "IoT", "MQTTv5", "messaging", "client" ]
description = "Pure rust MQTTv5 client implementation for sync and async (Smol & Tokio)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tokio", "smol", "sync"]
tokio = ["dep:tokio"]
smol = ["dep:smol"]
sync = []
logs = ["dep:tracing"]
# quic = ["dep:quinn"]

[dependencies]
# Packets
bytes = "1.4.0"

# Errors
thiserror = "1.0.40"
tracing = { version = "0.1.37", optional = true }

async-channel = "1.8.0"
#async-mutex = "1.4.0"
futures = { version = "0.3.27", default-features = false, features = ["std", "async-await"] }
async-trait = "0.1.68"

# quic feature flag
# quinn = {version = "0.9.0", optional = true }

# tokio feature flag
tokio = { version = "1.26.0", features = ["macros", "io-util", "net", "time"], optional = true }

# smol feature flag
smol = { version = "1.3.0", optional = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

smol = { version = "1.3.0" }
tokio = { version = "1.26.0", features = ["rt-multi-thread", "rt", "macros", "sync", "io-util", "net", "time"] }

pretty_assertions = "1.3.0"

rustls = { version = "0.21.0" }
rustls-pemfile = { version = "1.0.2" }
webpki = { version = "0.22.0" }
async-rustls = { version = "0.3.0" }
tokio-rustls = "0.24.0"
rstest = "0.16.0"
rand = "0.8.5"