[package]
name = "mqrstt-fuzz"
version = "0.0.0"
publish = false
edition = "2021"
license = "MIT"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

bytes = "1"

tokio = { version = "1", features = ["full"] }

[dependencies.mqrstt]
path = "../mqrstt"

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false
