[package]
name = "mqrstt"
version = "0.4.0"
homepage = "https://github.com/GunnarMorrigan/mqrstt"
repository = "https://github.com/GunnarMorrigan/mqrstt"
documentation = "https://docs.rs/mqrstt"
categories = ["network-programming"]
readme = "../README.md"
edition = "2021"
license = "MPL-2.0"
keywords = ["MQTT", "IoT", "MQTTv5", "messaging", "client"]
description = "Pure rust MQTTv5 client implementation Smol and Tokio"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "smol",
    "tokio"
]
sync = []
tokio = ["dep:tokio", "tokio/rt"]
smol = ["dep:smol"]
logs = ["dep:tracing"]
test = []

[dependencies]
# Packets
bytes = "1"

# Errors
thiserror = "1"
tracing = { version = "0.1", optional = true }

async-channel = "2"
futures = { version = "0.3", default-features = false, features = [
    "std",
    "async-await",
] }


# tokio feature flag
tokio = { version = "1", features = [
    "macros",
    "io-util",
    "net",
    "time",
], optional = true }

# smol feature flag
smol = { version = "2", optional = true }

[dev-dependencies]
pretty_assertions = "1.4.1"

tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

smol = { version = "2.0.0" }
tokio = { version = "1.33.0", features = [
    "rt-multi-thread",
    "rt",
    "macros",
    "sync",
    "io-util",
    "net",
    "time",
] }

rustls = { version = "0.21.7" }
rustls-pemfile = { version = "1.0.3" }
webpki = { version = "0.22.4" }
async-rustls = { version = "0.4.1" }
tokio-rustls = "0.24.1"
rstest = "0.23.0"
rand = "0.8.5"