[package]
name = "mqrstt"
version = "0.4.2"
homepage = "https://github.com/GunnarMorrigan/mqrstt"
repository = "https://github.com/GunnarMorrigan/mqrstt"
documentation = "https://docs.rs/mqrstt"
categories = ["network-programming"]
readme = "../README.md"
edition = "2024"
license = "MPL-2.0"
keywords = ["MQTT", "IoT", "MQTTv5", "messaging", "client"]
description = "Pure rust MQTTv5 client implementation Smol and Tokio"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["smol", "tokio"]
sync = []
tokio = ["dep:tokio", "tokio/rt"]
smol = ["dep:smol"]
logs = ["dep:tracing"]
test = []

[dependencies]
# Packets
bytes = "1"

# Errors
thiserror = "2"
tracing = { version = "0.1", optional = true }

async-channel = "2"
futures = { version = "0.3", default-features = false, features = [
    "std",
    "async-await",
] }

# tokio feature flag
tokio = { version = "1", features = [
    "macros",
    "io-util",
    "net",
    "time",
], optional = true }

# smol feature flag
smol = { version = "2", optional = true }

[dev-dependencies]
pretty_assertions = "1.4.1"

tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

smol = { version = "2.0.0" }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "rt",
    "macros",
    "sync",
    "io-util",
    "net",
    "time",
] }

rstest = "0.26.1"
rand = "0.9.2"
