[package]
name = "smol_tcp_v0_2_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mqrstt = { version = "0.2.2", default-features = false, features = ["smol"]}

smol = { version = "1.3.0" }
futures = { version = "0.3.27", default-features = false, features = ["std", "async-await"] }

async-trait = "0.1.68"

rustls = { version = "0.20.7" }
rustls-pemfile = { version = "1.0.1" }
webpki = { version = "0.22.0" }
async-rustls = { version = "0.3.0" }
