[package]
name = "tcp"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
smol = { version = "2" }
futures = "0.3.31"

tokio = { version = "1", features = ["full"] }

mqrstt = { path = "../../mqrstt", features = ["logs"] }

[[bin]]
name = "tokio"
path = "src/tokio.rs"

[[bin]]
name = "ping_pong"
path = "src/ping_pong.rs"

[[bin]]
name = "ping_pong_smol"
path = "src/ping_pong_smol.rs"

[[bin]]
name = "smol"
path = "src/smol.rs"
