[package]
name = "tokio_tcp_v0_2_2"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mqrstt = { version = "0.2.2", default-features = false, features = ["tokio"]}

tokio = { version = "1.26.0", features = ["rt-multi-thread", "rt", "macros", "sync", "io-util", "net", "time"] }
tokio-rustls = "0.24.0"

async-trait = "0.1.68"

rustls-pemfile = { version = "1.0.1" }
webpki = { version = "0.22.0" }
